risoluzione problema in CI